--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,15 @@ steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
 
+- task: PublishBuildArtifacts@1
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: publish
+    publishWebProjects: True
+    arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+    zipAfterPublish: True
+
 - task: AzureRmWebAppDeployment@3
   inputs:
     azureSubscription: 'dev-resources-connect'
