--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,4 +26,4 @@ steps:
   inputs:
     azureSubscription: 'dev-resources-connect'
     WebAppName: 'rest3'
-    Package: $(System.ArtifactsDirectory)/**/*.zip
+    Package: $(Build.ArtifactStagingDirectory)/**/*.zip
