Removing an unnecessary step.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,15 +15,8 @@ steps:
 
 - task: PublishBuildArtifacts@1
 
-- task: DotNetCoreCLI@2
-  inputs:
-    command: publish
-    publishWebProjects: True
-    arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
-    zipAfterPublish: True
-
 - task: AzureRmWebAppDeployment@3
   inputs:
     azureSubscription: 'dev-resources-connect'
     WebAppName: 'rest3'
-    Package: $(Build.ArtifactStagingDirectory)/**/*.zip
+    Package: $(Build.ArtifactsDirectory)/**/*.zip
