--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,22 +9,15 @@ pool:
 variables:
   buildConfiguration: 'Release'
 
-steps:
-- script: dotnet build --configuration $(buildConfiguration)
+steps: 
+- script: |
+    dotnet build --configuration $(buildConfiguration)
+    dotnet publish --configuration $(buildConfiguration) --output $BUILD_ARTIFACTSTAGINGDIRECTORY
   displayName: 'dotnet build $(buildConfiguration)'
-
-- task: PublishBuildArtifacts@1
-
-- task: DotNetCoreCLI@2
-  inputs:
-    command: publish
-    publishWebProjects: True
-    arguments: '--configuration $(buildConfiguration) --output $(System.ArtifactsDirectory)'
-    zipAfterPublish: True
 
 - task: AzureRmWebAppDeployment@3
   displayName: Publish to Azure
   inputs:
     azureSubscription: 'dev-resources-connect'
     WebAppName: 'rest3'
-    Package: $(System.ArtifactsDirectory)/**/*.zip
+    Package: $(Build.ArtifactStagingDirectory)/**/*.zip
