--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,17 @@ steps:
 - script: |
     dotnet build --configuration $(buildConfiguration)
     dotnet publish --configuration $(buildConfiguration) --output $BUILD_ARTIFACTSTAGINGDIRECTORY
-  displayName: 'dotnet build $(buildConfiguration)'
+  displayName: 'Build and Publish'
+
+- task: PublishBuildArtifacts@1
+  displayName: Publish artifacts
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: publish
+    publishWebProjects: True
+    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+    zipAfterPublish: True
 
 - task: AzureRmWebAppDeployment@3
   displayName: Publish to Azure
