--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,12 +18,12 @@ steps:
 - task: PublishBuildArtifacts@1
   displayName: Publish artifacts
 
-- task: DotNetCoreCLI@2
-  inputs:
-    command: publish
-    publishWebProjects: True
-    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
-    zipAfterPublish: True
+#- task: DotNetCoreCLI@2
+#  inputs:
+#    command: publish
+#    publishWebProjects: True
+#    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+#    zipAfterPublish: True
 
 - task: AzureRmWebAppDeployment@3
   displayName: Publish to Azure
