--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,18 +12,17 @@ variables:
 steps: 
 - script: |
     dotnet build --configuration $(buildConfiguration)
-    dotnet publish --configuration $(buildConfiguration) --output $BUILD_ARTIFACTSTAGINGDIRECTORY
-  displayName: 'Build and Publish'
+  displayName: 'Build'
 
-- task: PublishBuildArtifacts@1
-  displayName: Publish artifacts
+#- task: PublishBuildArtifacts@1
+#  displayName: Publish artifacts
 
-#- task: DotNetCoreCLI@2
-#  inputs:
-#    command: publish
-#    publishWebProjects: True
-#    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
-#    zipAfterPublish: True
+- task: DotNetCoreCLI@2
+  inputs:
+    command: publish
+    publishWebProjects: True
+    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+    zipAfterPublish: True
 
 - task: AzureRmWebAppDeployment@3
   displayName: Publish to Azure
